--- a/dmtxApp/src/Makefile
+++ b/dmtxApp/src/Makefile
@@ -21,6 +21,13 @@ LIBRARY_IOC += NDPluginDmtx
 
 NDPluginDmtx_SRCS += NDPluginDmtx.cpp
 
+ifdef DMTX_INCLUDE
+	USR_INCLUDES += -I$(DMTX_INCLUDE)
+endif
+ifdef DMTX_LIB
+	NDPluginDmtx_DIR += $(DMTX_LIB)
+endif
+
 include $(AREA_DETECTOR)/ADCore/ADApp/commonLibraryMakefile
 
 include $(TOP)/configure/RULES
